--- a/views/feature.ejs
+++ b/views/feature.ejs
@@ -31,7 +31,7 @@
     </section>
 
     <!-- Video Walkthrough and Caption Section -->
-    <section class="container-fluid my-5" style="background-color: #f0f0f0;">
+    <section class="container-fluid p-5" style="background-color: #f0f0f0;">
         <div class="row">
             <div class="col-md-8">
                 <div class="embed-responsive embed-responsive-16by9">
@@ -120,7 +120,7 @@
     </section>
 
     <!-- Drinks Snippets -->
-    <div style="background-color: #f0f0f0;">
+    <div style="background-color: #f0f0f0;" class="pb-5">
         <section class = "container">
           <br>
           <h3 class="display-6" style="font-family: 'Playfair Display', serif; color:#752329; font-weight:900; text-align: center; padding: 10px; ">Snippets of how we make our drinks</h3>
@@ -147,7 +147,7 @@
 
     <!-- Infographics Section -->
     <section style="background-color: #E8E8E1;">
-      <div class="container-fluid my-5">
+      <div class="container-fluid p-4">
       <br>
       <h3 class="display-6" style="font-family: 'Playfair Display', serif; font-weight: 700; text-align: center; font-weight: 900; color:#752329; padding-bottom: 20px; ">How We Started</h3>
       <div class="infographic d-flex justify-content-center">
