redesign request by welru

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -63,13 +63,13 @@
             <label for="review" class="form-label">Message <span class="text-danger">*</span></label>
             <textarea id="contactMessage" name="message" rows="4" cols="50" maxlength="300" class="form-control" placeholder="Write your message..." style = "border-color: #752329;" required></textarea>
             </div>
-            <button type="submit" class="btn btn-dark submit-btn" style = "margin: 0 auto; display: block; background-color: #752329;">Send Message</button>
+            <button type="submit" class="btn btn-dark submit-btn" style="background-color: #752329; margin: 0; display: block; float: right;">Send Message</button>
         </form>
 
             <br>
-            <div class="d-flex justify-content-center">
-            <a href="/email" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020;">Email</a>
-            <a href="/socmed" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #752329; border-color: #752329;">Social Media</a>
+            <div class="d-flex justify-content-left">
+            <a href="/email" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020; "><i class="fas fa-envelope"></i> Email</a>
+            <a href="/socmed" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020;"><i class="fas fa-globe"></i> Social Media</a>
             </div>
             <br>
 
