FIXED CUSTOMER MESSAGES

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -26,7 +26,7 @@
             
             <% if (users && users.length > 0) { %>
                 <% users.forEach(user => { %>
-                    <div class="col-3 col-sm-5 mb-3 me-1"> 
+                    <div class="col-12 col-md-4 mb-3"> 
                         <div class="card border-0 shadow-sm rounded" style="border: 1px solid #752329; background-color: #f8f9fa; max-width: 350px; margin: 0 auto;">
                             <div class="card-body p-4">
                                 <figure>
