Updated design request ni ruwela - paki gawan me search keng user list and the style don't forget thanks

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -63,7 +63,7 @@
             <label for="review" class="form-label">Message <span class="text-danger">*</span></label>
             <textarea id="contactMessage" name="message" rows="4" cols="50" maxlength="300" class="form-control" placeholder="Write your message..." style = "border-color: #752329;" required></textarea>
             </div>
-            <button type="submit" class="btn btn-dark submit-btn" style="background-color: #752329; margin: 0; display: block; float: right;">Send Message</button>
+            <button type="submit" class="btn btn-dark btn-lg me-2 submit-btn" style="background-color: #752329; margin: 0; display: block; float: right;">Send Message</button>
         </form>
 
             <br>
