--- a/views/socmed.ejs
+++ b/views/socmed.ejs
@@ -24,21 +24,21 @@
             <div class="row p-5">
                 <div class="col-md-4">
                     <div class="card" style = "background-color: #262626; color: #E8E8E1; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                        <img class = "card-img-top" src="./media/fb-post.png" alt="Facebook Post">
+                        <img class = "img-fluid" src="./media/fb-post.png" alt="Facebook Post" >
                         <h4 class = "card-title p-3" style = "text-align: center;">Facebook Post</h4>
                     </div>
                     <br>
                 </div>
                 <div class="col-md-4">
                     <div class="card" style = "background-color: #262626; color: #E8E8E1; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                        <img class = "card-img-top" src="./media/ig-post.png" alt="Instagram Post">
+                        <img class = "img-fluid" src="./media/ig-post.png" alt="Instagram Post" >
                         <h4 class = "card-title p-3" style = "text-align: center;">Instagram Post</h4>
                     </div>
                     <br>
                 </div>
                 <div class="col-md-4">
                     <div class="card" style = "background-color: #262626; color: #E8E8E1; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                        <img class = "card-img-top" src="./media/x-post.png" alt="X Post">
+                        <img class = "img-fluid" src="./media/x-post.png" alt="X Post" style="max-width: 100%;">
                         <h4 class = "card-title p-3" style = "text-align: center;">X Post</h4>
                     </div>
                     <br>
