--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -67,9 +67,13 @@
         </form>
 
             <br>
-            <div class="d-flex justify-content-left">
+            <div id = "desk-btn" class="d-flex justify-content-left">
             <a href="/email" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020; "><i class="fas fa-envelope"></i> Email</a>
             <a href="/socmed" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020;"><i class="fas fa-globe"></i> Social Media</a>
+            </div>
+            <div id = "btn-contact" class="d-flex justify-content-left">
+                <a href="/email" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020; "><i class="fas fa-envelope"></i></a>
+                <a href="/socmed" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020;"><i class="fas fa-globe"></i></a>
             </div>
             <br>
 
